--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -46,7 +46,7 @@
     {% include "aristotle_mdr/concepts/infobox.html" %}
     {% include "aristotle_mdr/concepts/visibilityInfoBar.html" %}
 
-    <h2 title="{% doc item 'definition' %}">{% trans 'Definition'%}</h2>
+    <h2 {% if not hide_item_help %}title="{% doc item 'definition' %}"{% endif %}>{% trans 'Definition'%}</h2>
     <div id="definition" class="definition">
         {{ item.definition | safe}}
     </div>
@@ -78,12 +78,14 @@
     {% if 'aristotle_mdr.contrib.links'|is_active_module %}
         {% include "aristotle_mdr/links/links_display.html" %}
     {% endif %}
-    <h2>Related content</h2>
-        {% block relationships %}{% endblock %}
-        {% for extension in config.CONTENT_EXTENSIONS %}
-            {% extra_content extension item request.user %}
-        {% endfor %}
-    </div>
+    {% if not hide_item_related %}
+      <h2>Related content</h2>
+          {% block relationships %}{% endblock %}
+          {% for extension in config.CONTENT_EXTENSIONS %}
+              {% extra_content extension item request.user %}
+          {% endfor %}
+      </div>
+    {% endif %}
 </div>
 
 </section>
