--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/valueDomainRepresentation.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/valueDomainRepresentation.html
@@ -64,7 +64,7 @@ So we've split this out into its own template.
                 <tr>
                     {% if forloop.first %}
                     <th rowspan="{{ item.permissiblevalue_set.count }}">Permissible Values
-                        {% if item|can_edit:request.user %}
+                        {% if item|can_edit:request.user and not hide_item_actions %}
                             <a class="inline_action" data-toggle="modal" data-target="#value_domain_modal"
                             href="{% url 'aristotle:permsissible_values_edit' item.id %}">edit</a>
                         {% endif %}
@@ -83,7 +83,7 @@ So we've split this out into its own template.
                 {% if item|can_edit:request.user %}
                 <tr>
                     <th>
-                        {% if item|can_edit:request.user %}
+                        {% if item|can_edit:request.user and not hide_item_actions %}
                             <a class="inline_action" data-toggle="modal" data-target="#value_domain_modal"
                             href="{% url 'aristotle:permsissible_values_edit' item.id %}">Add Permissible Values</a>
                         {% endif %}
@@ -101,7 +101,7 @@ So we've split this out into its own template.
                 <tr>
                     {% if forloop.first %}
                     <th rowspan="{{ item.supplementaryvalue_set.count }}">Supplementary Values
-                        {% if item|can_edit:request.user %}
+                        {% if item|can_edit:request.user and not hide_item_actions %}
                             <a class="inline_action" data-toggle="modal" data-target="#value_domain_modal"
                             href="{% url 'aristotle:supplementary_values_edit' item.id %}">edit</a>
                         {% endif %}
@@ -120,7 +120,7 @@ So we've split this out into its own template.
                 {% if item|can_edit:request.user %}
                 <tr>
                     <th>
-                        {% if item|can_edit:request.user %}
+                        {% if item|can_edit:request.user and not hide_item_actions %}
                             <a class="inline_action" data-toggle="modal" data-target="#value_domain_modal"
                             href="{% url 'aristotle:supplementary_values_edit' item.id %}">Add Supplementary Values</a>
                         {% endif %}
