--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContentVersion.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContentVersion.html
@@ -1,43 +1,85 @@
-{% extends 'aristotle_mdr/concepts/managedContent.html' %}
+{% extends 'aristotle_mdr/base.html' %}
+{% load humanize i18n %}
 
 {% block title %}
-{{ block.super }}
-( Previous Version )
+    {{ item.name }}
+    {% if item.version %}
+        - v{{ item.version }}
+    {% endif %}
+    ( Previous Version )
 {% endblock %}
 
-{% block extra_content %}
-<h2>Representation</h2>
-{% for weak in item.weak %}
-<h3>{{ weak.model }}</h3>
-<table class="table">
-  <thead>
-    <tr>
-      {% for key in weak.items.0.keys %}
-      <th>{{ key }}</th>
-      {% endfor %}
-    <tr>
-  </thead>
-  <tbody>
-    {% for item in weak.items %}
-      <tr>
-      {% for value in item.values %}
-        <td>{{ value }}</td> 
-      {% endfor %}
-      </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% endfor %}
+{% block content %}
+<header class="row">
+    {% block concept_title %}
+    {% include "aristotle_mdr/concepts/titles/display_title.html" %}
+    {% endblock %}
+</header>
+<section class="managed row">
+    {% include "aristotle_mdr/concepts/infobox.html" %}
+    {% include "aristotle_mdr/concepts/visibilityInfoBar.html" %}
 
-<h2>Links</h2>
-<table class="table">
-  <tbody>
-    {% for link in item.strong %}
-      <tr>
-        <th>{{ link.model }}</th>
-        <td><a href="{% url 'aristotle:item' link.item.id %}">{{ link.item.name }}</a></td>
-      </tr>
+    <h2>{% trans 'Definition'%}</h2>
+    <div id="definition" class="definition">
+        {{ item.definition | safe}}
+    </div>
+
+    {% if item.comments %}
+        <h2>Comments</h2>
+        {{ item.comments | safe }}
+    {% endif %}
+
+    <h2>Names & References</h2>
+      <h3>References</h3>
+          <p>{{ item.references|safe|default:"None" }}</p>
+      <h3>Submitting Organisation</h3>
+          <p>{{ item.submitting_organisation|default:"None" }}</p>
+      <h3>Responsible Organisation</h3>
+          <p>{{ item.responsible_organisation|default:"None" }}</p>
+
+    <h2>Components</h2>
+    {% for field, value in item.components.items %}
+      <h3>{{ field }}</h3>
+      <p>{{ value|default:"None" }}</p>
     {% endfor %}
-  </tbody>
-</table>
+    {% for weak in item.weak %}
+    <h3>{{ weak.model }}</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          {% for key in weak.items.0.keys %}
+          <th>{{ key }}</th>
+          {% endfor %}
+        <tr>
+      </thead>
+      <tbody>
+        {% for item in weak.items %}
+          <tr>
+          {% for value in item.values %}
+            {% if value.obj %}
+              <td>{{ value.obj.name }}</td>
+            {% else %}
+              <td>{{ value }}</td> 
+            {% endif %}
+          {% endfor %}
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% endfor %}
+
+    <h2>Links</h2>
+    <table class="table">
+      <tbody>
+        {% for link in item.strong %}
+          <tr>
+            <th>{{ link.model }}</th>
+            <td><a href="{% url 'aristotle:item' link.item.id %}">{{ link.item.name }}</a></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    </div>
+
+</section>
 {% endblock %}
