--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -66,7 +66,7 @@
                     {% endif %}
                 {% else %}
                     <time title="{{ item.modified|date:'o-m-d H:i e' }}" datetime="{{ item.modified|date:'c' }}">
-                        {{item.modified|naturaltime}}
+                        {{ item.modified|naturaltime }}
                     </time>
                 {% endif %}
                 {% if request.user.is_superuser or request.user.is_active and item.workgroup in request.user.workgroups %}
@@ -80,7 +80,7 @@
                 </span>
                 {% endif %}
             </dd>
-            <dt>{% if item_is_version %}{% trans 'Item Created' %}{% else %}{% trans 'Created'%}{% endif %}</dt>
+            <dt>{% trans 'Created'%}</dt>
             <dd><time title="{{ item.created|date:'o-m-d' }}" datetime="{{ item.created|date:'c' }}">{{ item.created|date:'o-m-d' }}</time></dd>
 
         {% block asideContent %}{% endblock %}
