--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/versionInfobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/versionInfobox.html
@@ -4,6 +4,16 @@
 {% block infobox_list %}
     <dt>{% trans 'Type' context "Object Type" %}</dt>
     <dd>{{ item.get_verbose_name }}</dd>
+    <dt>Identifiers</dt>
+    <dd>UUID - <span title='{{ item.uuid }}'>{{ item.uuid }}</span></dd>
     <dt>{% trans 'Version Created' %}</dt>
     <dd>{{ revision.date_created|date:'o-m-d H:i e' }}</dd>
+    <dt>{% trans 'Item Created' %}</dt>
+    <dd><time title="{{ item.created|date:'o-m-d' }}" datetime="{{ item.created|date:'c' }}">{{ item.created|date:'o-m-d' }}</time></dd>
+    <hr>
+      <dt>{% trans 'Current Item' %}</dt>
+      <dd><a href="{% url 'aristotle:item' current_item.id %}">{{ current_item.name }}</a></dd>
+      <dt>{% trans 'Registration' %}</dt>
+      <dd><a href="{% url 'aristotle:registrationHistory' item.id %}">{% trans 'View registration history'%}</a></dd>
+    </hr>
 {% endblock %}
