--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -94,6 +94,7 @@
             {% endfor %}
       </div>
 
+      {% if request.user.is_authenticated %}
       <div class="modal fade exclude-scrap" id="TagEditorModal" tabindex="-1" role="dialog" aria-labelledby="TagEditor">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -122,6 +123,7 @@
           </div>
         </div>
       </div>
+      {% endif %}
 
 </section>
 </div>
