Replace unsafe safe usage

--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
@@ -75,12 +75,12 @@
                         {% if deinc.specific_information %}
                         <div>
                             <strong>Specific Information:</strong>
-                            {{ deinc.specific_information | safe }}
+                            {{ deinc.specific_information|bleach }}
                         </div>
                         {% endif %}
                         {% if deinc.conditional_obligation %}
                         <div>
-                            <strong>Conditional Obligation:</strong>{{ deinc.conditional_obligation|safe }}
+                            <strong>Conditional Obligation:</strong>{{ deinc.conditional_obligation|bleach }}
                         </div>
                         {% endif %}
                     </td>
@@ -140,12 +140,12 @@
                         {% if deinc.specific_information %}
                         <div>
                             <strong>Specific Information:</strong>
-                            {{ deinc.specific_information | safe }}
+                            {{ deinc.specific_information|bleach }}
                         </div>
                         {% endif %}
                         {% if deinc.conditional_obligation %}
                         <div>
-                            <strong>Conditional Obligation:</strong>{{ deinc.conditional_obligation | safe }}
+                            <strong>Conditional Obligation:</strong>{{ deinc.conditional_obligation|bleach }}
                         </div>
                         {% endif %}
                     </td>
