--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/search/search.html
@@ -103,7 +103,7 @@
                             <li role="presentation" class="divider"></li>
                             <li role="presentation">
                                 <label role="menuitem" for='id_{{form.mds.name}}'>Modified after...</label>
-                                {{ form.mds|safe }}
+                                {{ form.mds }}
                             </li>
                             <li role="presentation">
                                 <label role="menuitem" for='id_{{form.mde.name}}'>Modified before...</label>
