--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/newuser/email/notification_body.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/newuser/email/notification_body.html
@@ -1,4 +1,4 @@
-You've been added to the organization {{ organization|safe }} on {{ domain.name }} by {{ sender.full_name|safe }}.`
+You've been added to the organization {{ organization }} on {{ domain.name }} by {{ sender.full_name }}.`
 
 Follow the link below to view this organization.
 
