--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/newuser/email/reminder_body.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/newuser/email/reminder_body.html
@@ -1,4 +1,4 @@
-You've been invited to join {{ organization|safe }} on {{ domain.name }} by {{ sender.full_name|safe }}.
+You've been invited to join {{ organization }} on {{ domain.name }} by {{ sender.full_name }}.
 
 Follow this link to create your user account.
 
